# gitlab-mcp-bridge

./: .encryption_key  .gitignore  ARCHITECTURE.md  DOCKER_INSTALL_MACOS12.md  DOCKER_SETUP.md  Procfile  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.yml  fix_output.json  manage.py  pyproject.toml  requirements.txt  send_to_teams.py  setup.sh
dummy/: mixed_errors-3.txt
gitlab_mcp_bridge/: asgi.py  settings.py  urls.py  wsgi.py
mcp_bridge/: admin.py  apps.py  models.py  urls.py  views.py
mcp_bridge/management/commands/: run_mcp.py  test_gitlab_connection.py
mcp_bridge/migrations/: 0001_initial.py  0002_repository_force_ollama.py  0003_alter_llmprovider_provider_type.py  0004_alter_llmprovider_base_url.py  0005_alter_llmprovider_provider_type.py
mcp_bridge/services/: __init__.py  ai_service.py  gitlab_service.py  log_analyzer.py  notification_service.py
mcp_bridge/templates/admin/mcp_bridge/gitlabconnection/: change_form.html
